Fixed modal closing when touching on background on mobile, and fixed modal title covering the close button.

--- a/gestcon/collection/collection.css
+++ b/gestcon/collection/collection.css
@@ -58,6 +58,10 @@
     cursor: pointer;
 }
 
+.modal-card-title{
+  flex: 1 1 auto;
+}
+
 .modal-image {
   display:inline-block;
   overflow: hidden; /* keeps object-fit cropping */
